# GpuFitsCrypt

./: .dockerignore  .gitignore  AES.cu  CMakeLists.txt  LICENSE  Makefile  README.md  README_API.md  REFERENCES.md  aes.h  aes_encrypt.cu  aes_encrypt_gpu.cu  aes_keyschedule_lut.cu  aes_main.cu  fits_crypto_operations.cu  fits_crypto_operations.h  gcm_kernels.cu  gcm_kernels.h  gcm_operations.cu  gcm_operations.h  gpu_utils.cu  gpu_utils.h  internal-aes.h  kernel.cu  lib_internal_utils.cpp  lib_internal_utils.h  libgpufitscrypt.h  requirements.txt  setup.py  tables.h
examples/: basic_usage.py
python/: gpufitscrypt.py
reproducibility/: README.md
reproducibility/analysis/: generate_gcm_vs_ctr_comparison.py  generate_optimal_kernel_configs.py  generate_time_breakdown.py  run_paper_artifacts.sh
reproducibility/analysis/paper_outputs/tables/: gcm_vs_ctr_comparison.tex  optimal_kernel_configs.tex
reproducibility/benchmarks/: analyze_results.py  benchmark_suite.py  compile_configs.py  encrypt_all.py  fits_utils.py  main_runner.py  utils.py
reproducibility/docker/: .env  Dockerfile  Dockerfile_jetson  docker-compose.yml  docker-compose_jetson.yml
src/gpufitscrypt/: __init__.py  aes_gcm.py  fits_handler.py  gf128.py  ghash.py  policy_engine.py
src/gpufitscrypt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/gpufitscrypt/kernels/: __init__.py  aes_gcm_kernel.cu  ghash_kernel.cu
tests/: test_aes_gcm.py  test_fits_handler.py  test_gf128.py  test_ghash.py  test_policy_engine.py
